--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "react-scripts build",
     "format": "prettier --list-different --write .",
+    "generate:types": "graphql-codegen --config codegen.yml",
     "lighthouse": "lhci autorun",
     "lint": "run-p -c lint:es lint:style",
     "lint:ci": "run-s -c lint:es lint:style",
@@ -24,6 +25,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@graphql-codegen/cli": "^2.6.3",
+    "@graphql-codegen/fragment-matcher": "^3.2.1",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.5.1",
+    "@graphql-codegen/typescript-operations": "^2.4.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.16",
     "@lhci/cli": "^0.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -49,6 +56,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
@@ -58,6 +66,7 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dayjs": "^1.10.7",
+    "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -103,13 +112,12 @@
       "!**/node_modules/**",
       "!src/index.tsx",
       "!src/reportWebVitals.ts",
-      "!src/entities/*.{js,ts,jsx,tsx}",
-      "!src/**/*.mock.{js,jsx,ts,tsx}",
-      "!src/constants/*.{js,jsx,ts,tsx}",
-      "!src/__mocks__/*.{js,jsx,ts,tsx}",
+      "!src/@constants/**/*.{js,jsx,ts,tsx}",
       "!src/test-utilities/*.{js,jsx,ts,tsx}",
-      "!src/mui/*.{js,jsx,ts,tsx}",
-      "!src/services/rest/rest.ts"
+      "!src/mui/**/*.{js,jsx,ts,tsx}",
+      "!src/generated/*.{ts,tsx}",
+      "!**/*.graphql.ts",
+      "!**/index.ts"
     ],
     "coverageThreshold": {
       "global": {
