--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.12.3",
     "classnames": "^2.3.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
