feat: add missing dependencies

--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
+    "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.12.3",
     "classnames": "^2.3.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
