chore: update sonar properties file & fix code smell

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.testExecutionReportPaths=test-report.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.javascript.exclusions=**/*mock*.ts
-sonar.coverage.exclusions=**.test.*,**/__mocks__/*,src/test/**,**.d.ts,src/index.tsx,src/reportWebVitals.ts,src/entities/**,src/constants/**,src/test-utilities/**,src/mui/**
+sonar.coverage.exclusions=**.test.*,**/__mocks__/*,**.d.ts,src/index.tsx,src/reportWebVitals.ts,src/@constants/**,src/test-utilities/**,src/mui/**,src/generated/**,**/*.graphql.*
