--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=carrieforde
 sonar.language=javascript
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts
+sonar.test.inclusions=**/*.test.ts
 sonar.testExecutionReportPaths=test-report.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.javascript.exclusions=**/*mock*.ts
