--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "react-scripts build",
+    "build": "next build",
+    "dev": "next dev",
     "format": "prettier --list-different --write .",
     "generate:types": "graphql-codegen --config codegen.yml",
     "lighthouse": "lhci autorun",
     "lint": "run-p -c lint:es lint:style",
     "lint:ci": "run-s -c lint:es lint:style",
-    "lint:es": "eslint './src/**/*.{js,jsx,ts,tsx}' --max-warnings=10",
+    "lint:es": "eslint './src/**/*.{js,jsx,ts,tsx}'",
     "lint:style": "stylelint './src/**/*.{css,scss}'",
     "new:component": "hygen component new",
     "new:hook": "hygen hook new",
     "new:slice": "hygen slice new",
     "preflight": "run-s -c format lint test",
     "serve": "serve -s build -l 4200",
-    "start": "react-scripts start",
-    "test": "react-scripts test --watchAll=false --maxWorkers=50% --coverage --testResultsProcessor jest-sonar-reporter",
-    "test:ci": "react-scripts test --watchAll=false --maxWorkers=2 --coverage --testResultsProcessor jest-sonar-reporter",
-    "test:watch": "react-scripts test --watch --maxWorkers=25%",
+    "start": "next start",
+    "test": "jest --watchAll=false --maxWorkers=50% --coverage --testResultsProcessor jest-sonar-reporter",
+    "test:ci": "jest --watchAll=false --maxWorkers=2 --coverage --testResultsProcessor jest-sonar-reporter",
+    "test:watch": "jest --watch --maxWorkers=25%",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^8.0.0",
     "hygen": "^6.1.0",
@@ -68,14 +70,14 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dayjs": "^1.10.7",
+    "eslint-config-react-app": "^7.0.1",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
+    "next": "^12.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.33.0",
-    "react-router": "^6.2.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
@@ -101,7 +103,7 @@
       "prettier --write"
     ],
     "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=0"
+      "eslint"
     ],
     "src/**/*.{css,scss}": [
       "stylelint"
